--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "mocha": "^3.2.0",
     "supertest": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.15.2"
+  }
 }
