--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/puck7744/AES-Front-End-Test#readme",
   "devDependencies": {
+    "coveralls": "^2.12.0",
     "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "supertest": "^3.0.0"
   },
   "dependencies": {
