--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "My implementation of the AES Front End Developer Skill Test.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha -R spec"
+    "test": "./node_modules/.bin/mocha -R spec",
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec",
+    "coveralls": "npm run-script coverage && node ./node_modules/coveralls/bin/coveralls < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "homepage": "https://github.com/puck7744/AES-Front-End-Test#readme",
   "devDependencies": {
     "coveralls": "^2.12.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "supertest": "^3.0.0"
