--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
-    "express": "^4.15.2"
+    "browserify": "^14.1.0",
+    "express": "^4.15.2",
+    "node-jsx": "^0.13.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "reactify": "^1.1.1"
   }
 }
