--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "browserify": "^14.1.0",
     "express": "^4.15.2",
+    "express-session": "^1.15.1",
     "node-jsx": "^0.13.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
